Update suite à notre réunion tpl.php => .tpl {% %] => { } web/arborescence.xml => inc/arborescence.xml

--- a/trunk/www/.htaccess
+++ b/trunk/www/.htaccess
@@ -11,6 +11,6 @@ RewriteRule ^(.*)$ index.php [L,QSA]
 </Files>
 
 # Pas d'acces au templates & layout
-<Files ~ "\.tpl.php$"> 
+<Files ~ "\.tpl$"> 
  Deny from all
 </Files>
