--- a/trunk/www/.htaccess
+++ b/trunk/www/.htaccess
@@ -1,6 +1,8 @@
 Options +FollowSymlinks
 RewriteEngine On
 
+Options -Indexes
+
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
