--- a/www/.htaccess
+++ b/www/.htaccess
@@ -51,3 +51,8 @@ Header unset Cache-Control
     AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
+<Location /mod_pagespeed_statistics>
+    Order allow,deny
+    Allow from localhost
+    SetHandler mod_pagespeed_statistics
+</Location>
